overflow fixed

--- a/src/css/catalog.css
+++ b/src/css/catalog.css
@@ -101,9 +101,6 @@ cataloge-links:hover .catalog-overlay {
   color: rgba(255, 255, 255, 0.5);
 }
 
-/* .catalog-overlay-paragraph:not(:last-child) {
-  margin-bottom: 14px;
-} */
 .catalog-overlay-desc {
   margin-bottom: 14px;
 }
@@ -206,7 +203,7 @@ cataloge-links:hover .catalog-overlay {
 
   .catalog-watch-list-item {
     width: 276px;
-    /* flex-basis: calc((100% - 3 * 24px) / 4); */
+    flex-basis: calc((100% - 3 * 24px) / 4);
   }
 
   .catalog-watch-list-item:nth-child(n + 9) {
